[project]
name = "simple-rpg"
version = "0.1.0"
description = "A simple RPG game in python"
readme = "README.md"
authors = [
    { name = "Lucas Galvao Janot"}
]
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.3.0",
]

[project.scripts]
simple-rpg = "simple_rpg:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
